--- a/versions/v2.11/modules/en/pages/installation-and-upgrade/installation-and-upgrade.adoc
+++ b/versions/v2.11/modules/en/pages/installation-and-upgrade/installation-and-upgrade.adoc
@@ -8,10 +8,12 @@
 ifeval::["{build-type}" != "community"]
 :xref-install-rancher: xref:installation-and-upgrade/install-rancher.adoc
 :xref-arch-rec: xref:about-rancher/architecture/recommendations.adoc
+:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
 endif::[]
 ifeval::["{build-type}" == "community"]
 :xref-install-rancher: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/install-upgrade-on-a-kubernetes-cluster.adoc
 :xref-arch-rec: xref:reference-guides/rancher-manager-architecture/architecture-recommendations.adoc
+:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
 endif::[]
 
 This section provides an overview of the architecture options of installing Rancher, describing advantages of each option.
@@ -93,11 +95,11 @@ For more architecture recommendations, refer to {xref-arch-rec}[this page.]
 
 === More Options for Installations on a Kubernetes Cluster
 
-Refer to the xref:installation-and-upgrade/references/helm-chart-options.adoc[Helm chart options] for details on installing Rancher on a Kubernetes cluster with other configurations, including:
+Refer to the {xref-helm-chart-options}[Helm chart options] for details on installing Rancher on a Kubernetes cluster with other configurations, including:
 
-* With xref:installation-and-upgrade/references/helm-chart-options.adoc#_api_audit_log[API auditing to record all transactions]
-* With xref:installation-and-upgrade/references/helm-chart-options.adoc#_external_tls_termination[TLS termination on a load balancer]
-* With a xref:installation-and-upgrade/references/helm-chart-options.adoc#_customizing_your_ingress[custom Ingress]
+* With {xref-helm-chart-options}#_api_audit_log[API auditing to record all transactions]
+* With {xref-helm-chart-options}#_external_tls_termination[TLS termination on a load balancer]
+* With a {xref-helm-chart-options}#_customizing_your_ingress[custom Ingress]
 
 In the Rancher installation instructions, we recommend using K3s or RKE to set up a Kubernetes cluster before installing Rancher on the cluster. Both K3s and RKE have many configuration options for customizing the Kubernetes cluster to suit your specific environment. For the full list of their capabilities, refer to their documentation:
 
