--- a/versions/v2.11/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+++ b/versions/v2.11/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
@@ -4,6 +4,13 @@
 :page-revdate: {revdate}
 :community-path: getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher.adoc 
 :product-path: installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+ifeval::["{build-type}" != "community"]
+:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
+endif::[]
+
 
 Now that you have a running RKE cluster, you can install Rancher in it. For security reasons all traffic to Rancher must be encrypted with TLS. For this tutorial you are going to automatically issue a self-signed certificate through https://cert-manager.io/[cert-manager]. In a real-world use-case you will likely use Let's Encrypt or provide your own certificate.
 
@@ -101,6 +108,6 @@ You can now navigate to `+https://rancher.example.com+` and start using Rancher.
 
 These resources could be helpful when installing Rancher:
 
-* xref:installation-and-upgrade/references/helm-chart-options.adoc[Rancher Helm chart options]
+* {xref-helm-chart-options}[Rancher Helm chart options]
 * xref:installation-and-upgrade/resources/tls-secrets.adoc[Adding TLS secrets]
 * xref:installation-and-upgrade/troubleshooting/troubleshooting.adoc[Troubleshooting Rancher Kubernetes Installations]
