--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/resources/custom-ca-root-certificates.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/resources/custom-ca-root-certificates.adoc
@@ -6,6 +6,12 @@ endif::[]
 :page-revdate: {revdate}
 :community-path: getting-started/installation-and-upgrade/resources/custom-ca-root-certificates.adoc 
 :product-path: installation-and-upgrade/resources/custom-ca-root-certificates.adoc
+ifeval::["{build-type}" != "community"]
+:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
+endif::[]
 
 If you're using Rancher in an internal production environment where you aren't exposing apps publicly, use a certificate from a private certificate authority (CA).
 
@@ -23,4 +29,4 @@ Examples of services that Rancher can access:
 
 For details on starting a Rancher container with your private CA certificates mounted, refer to the installation docs:
 
-* xref:installation-and-upgrade/references/helm-chart-options.adoc#_additional_trusted_cas[Kubernetes install options for Additional Trusted CAs]
+* {xref-helm-chart-options}#_additional_trusted_cas[Kubernetes install options for Additional Trusted CAs]
