--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/install-rancher.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/install-rancher.adoc
@@ -9,9 +9,11 @@ endif::[]
 :description: Learn how to install Rancher in development and production environments. Read about single node and high availability installation
 ifeval::["{build-type}" != "community"]
 :xref-rancher-on-aks: xref:installation-and-upgrade/hosted-kubernetes/rancher-on-aks.adoc
+:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
 endif::[]
 ifeval::["{build-type}" == "community"]
 :xref-rancher-on-aks: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/rancher-on-aks.adoc
+:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
 endif::[]
 
 In this section, you'll learn how to deploy Rancher on a Kubernetes cluster using the Helm CLI.
@@ -332,11 +334,11 @@ Now that Rancher is deployed, see xref:installation-and-upgrade/resources/tls-se
 
 The Rancher chart configuration has many options for customizing the installation to suit your specific environment. Here are some common advanced scenarios.
 
-* xref:installation-and-upgrade/references/helm-chart-options.adoc#_http_proxy[HTTP Proxy]
-* xref:installation-and-upgrade/references/helm-chart-options.adoc#_private_registry_and_air_gap_installs[Private Container Image Registry]
-* xref:installation-and-upgrade/references/helm-chart-options.adoc#_external_tls_termination[TLS Termination on an External Load Balancer]
+* {xref-helm-chart-options}#_http_proxy[HTTP Proxy]
+* {xref-helm-chart-options}#_private_registry_and_air_gap_installs[Private Container Image Registry]
+* {xref-helm-chart-options}#_external_tls_termination[TLS Termination on an External Load Balancer]
 
-See the xref:installation-and-upgrade/references/helm-chart-options.adoc[Chart Options] for the full list of options.
+See the {xref-helm-chart-options}[Chart Options] for the full list of options.
 
 === 6. Verify that the Rancher Server is Successfully Deployed
 
