--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -11,12 +11,14 @@ ifeval::["{build-type}" != "community"]
 :xref-install-rancher: xref:installation-and-upgrade/install-rancher.adoc
 :xref-access-cluster-kubectl: xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
 :xref-fleet-overview: xref:integrations/fleet/overview.adoc
+:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
 endif::[]
 ifeval::["{build-type}" == "community"]
 :xref-kubeconfig-file: xref:how-to-guides/new-user-guides/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc
 :xref-install-rancher: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/install-upgrade-on-a-kubernetes-cluster.adoc
 :xref-access-cluster-kubectl: xref:how-to-guides/new-user-guides/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
 :xref-fleet-overview: xref:integrations-in-rancher/fleet/overview.adoc
+:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
 endif::[]
 
 == Updating a Private CA Certificate
@@ -132,7 +134,7 @@ privateCA: true
 [NOTE]
 .Important:
 ====
-   As the certificate is signed by a private CA, it is important to ensure xref:installation-and-upgrade/references/helm-chart-options.adoc#_common_options[`privateCA: true`] is set in the `values.yaml` file.
+   As the certificate is signed by a private CA, it is important to ensure {xref-helm-chart-options}#_common_options[`privateCA: true`] is set in the `values.yaml` file.
 ====
 
 
@@ -294,7 +296,7 @@ helm ls -n cattle-system
 
 . Update the current Helm values in the `values.yaml` file:
  .. As a private CA is no longer being used, remove the `privateCA: true` field, or set this to `false`
- .. Adjust the `ingress.tls.source` field as necessary. Please xref:installation-and-upgrade/references/helm-chart-options.adoc#_common_options[refer to the chart options] for more details. Here are some examples:
+ .. Adjust the `ingress.tls.source` field as necessary. Please {xref-helm-chart-options}#_common_options[refer to the chart options] for more details. Here are some examples:
   ... If using a public CA continue with a value of: `secret`
   ... If using Let's Encrypt update the value to: `letsEncrypt`
 . Update the Helm values for the Rancher chart using the `values.yaml` file, and the current chart version to prevent an upgrade:
