--- a/versions/v2.10/modules/en/pages/installation-and-upgrade/references/references.adoc
+++ b/versions/v2.10/modules/en/pages/installation-and-upgrade/references/references.adoc
@@ -4,5 +4,11 @@
 :page-revdate: {revdate}
 :community-path: getting-started/installation-and-upgrade/installation-references/index.adoc 
 :product-path: installation-and-upgrade/references/references.adoc
+ifeval::["{build-type}" != "community"]
+:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
+endif::[]
 
-Please see the following reference guides for other installation resources: xref:installation-and-upgrade/references/helm-chart-options.adoc[Rancher Helm chart options], xref:installation-and-upgrade/references/tls-settings.adoc[TLS settings], and xref:installation-and-upgrade/references/feature-flags.adoc[feature flags].
+Please see the following reference guides for other installation resources: {xref-helm-chart-options}[Rancher Helm chart options], xref:installation-and-upgrade/references/tls-settings.adoc[TLS settings], and xref:installation-and-upgrade/references/feature-flags.adoc[feature flags].
