--- a/versions/v2.11/modules/en/pages/installation-and-upgrade/references/tls-settings.adoc
+++ b/versions/v2.11/modules/en/pages/installation-and-upgrade/references/tls-settings.adoc
@@ -6,9 +6,11 @@
 :product-path: installation-and-upgrade/references/tls-settings.adoc
 ifeval::["{build-type}" != "community"]
 :xref-install-rancher: xref:installation-and-upgrade/install-rancher.adoc
+:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
 endif::[]
 ifeval::["{build-type}" == "community"]
 :xref-install-rancher: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/install-upgrade-on-a-kubernetes-cluster.adoc
+:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
 endif::[]
 
 Changing the default TLS settings depends on the chosen installation method.
@@ -66,7 +68,7 @@ kubectl get cluster.management.cattle.io -o jsonpath='{range .items[?(@.metadata
 
 === Changing the Setting
 
-You can change the setting using the Rancher UI or the `agentTLSMode` xref:installation-and-upgrade/references/helm-chart-options.adoc[helm chart option].
+You can change the setting using the Rancher UI or the `agentTLSMode` {xref-helm-chart-options}[helm chart option].
 
 [NOTE]
 ====
