--- a/versions/v2.11/modules/en/pages/installation-and-upgrade/troubleshooting/rancher-ha.adoc
+++ b/versions/v2.11/modules/en/pages/installation-and-upgrade/troubleshooting/rancher-ha.adoc
@@ -4,6 +4,12 @@
 :page-revdate: {revdate}
 :community-path: troubleshooting/other-troubleshooting-tips/rancher-ha.adoc 
 :product-path: installation-and-upgrade/troubleshooting/rancher-ha.adoc
+ifeval::["{build-type}" != "community"]
+:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
+endif::[]
 
 The commands/steps listed on this page can be used to check your Rancher Kubernetes Installation.
 
@@ -112,4 +118,4 @@ kubectl -n cattle-system set env deploy/rancher CATTLE_ELECTION_LEASE_DURATION=2
 ----
 
 This will temporarily increase the lease duration, renew deadline and retry period to 120, 90 and 10 seconds respectively.
-Alternatively, in order to make such changes permanent, these environment variables can be set by xref:installation-and-upgrade/references/helm-chart-options.adoc#_setting_extra_environment_variables[using Helm values] instead.
+Alternatively, in order to make such changes permanent, these environment variables can be set by {xref-helm-chart-options}#_setting_extra_environment_variables[using Helm values] instead.
