--- a/versions/v2.11/modules/en/pages/observability/logging/enable-api-audit-log.adoc
+++ b/versions/v2.11/modules/en/pages/observability/logging/enable-api-audit-log.adoc
@@ -4,6 +4,12 @@
 :page-revdate: {revdate}
 :community-path: how-to-guides/advanced-user-guides/enable-api-audit-log.adoc 
 :product-path: observability/logging/enable-api-audit-log.adoc
+ifeval::["{build-type}" != "community"]
+:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
+endif::[]
 
 You can enable the API audit log to record the sequence of system events initiated by individual users. You can know what happened, when it happened, who initiated it, and what cluster it affected. When you enable this feature, all requests to the Rancher API and all responses from it are written to a log.
 
@@ -13,7 +19,7 @@ You can enable API Auditing during Rancher installation or upgrade.
 
 The Audit Log is enabled and configured by passing environment variables to the Rancher server container. See the following to enable on your installation.
 
-* xref:installation-and-upgrade/references/helm-chart-options.adoc#_api_audit_log[Kubernetes Install]
+* {xref-helm-chart-options}#_api_audit_log[Kubernetes Install]
 
 == API Audit Log Options
 
