--- a/versions/v2.9/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
+++ b/versions/v2.9/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
@@ -4,6 +4,13 @@
 :page-revdate: {revdate}
 :community-path: integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/install-adapter.adoc 
 :product-path: installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
+ifeval::["{build-type}" != "community"]
+:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
+endif::[]
+
 
 IMPORTANT: If you are attempting to re-install the adapter, you may experience errant out-of-compliance messages for up to an hour.
 
@@ -82,7 +89,7 @@ kubectl create ns cattle-csp-adapter-system
 
 == 3. Create Certificate Secrets
 
-The adapter requires access to the root CA that Rancher is using to communicate with the Rancher server. You can read more about which certificate options Rancher supports in the xref:installation-and-upgrade/references/helm-chart-options.adoc[chart options page].
+The adapter requires access to the root CA that Rancher is using to communicate with the Rancher server. You can read more about which certificate options Rancher supports in the {xref-helm-chart-options}[chart options page].
 
 If your Rancher install uses a certificate signed by a recognized Certificate Authority such as Let's Encrypt, then you can safely skip to <<_4_install_the_chart,Step 4>>.
 
