--- a/versions/v2.9/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
+++ b/versions/v2.9/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
@@ -4,6 +4,13 @@
 :page-revdate: {revdate}
 :community-path: getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-rancher-ha.adoc 
 :product-path: installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
+ifeval::["{build-type}" != "community"]
+:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
+endif::[]
+
 
 This section is about how to deploy Rancher for your air gapped environment in a high-availability Kubernetes installation. An air gapped environment could be where Rancher server will be installed offline, behind a firewall, or behind a proxy.
 
@@ -65,7 +72,7 @@ When Rancher is installed on an air gapped Kubernetes cluster, there are two rec
 [NOTE]
 ====
 
-If you want terminate SSL/TLS externally, see xref:installation-and-upgrade/references/helm-chart-options.adoc#_external_tls_termination[TLS termination on an External Load Balancer].
+If you want terminate SSL/TLS externally, see {xref-helm-chart-options}#_external_tls_termination[TLS termination on an External Load Balancer].
 ====
 
 
@@ -300,6 +307,6 @@ If you don't intend to send telemetry data, opt out xref:faq/telemetry.adoc[tele
 These resources could be helpful when installing Rancher:
 
 * xref:integrations/rancher-extensions.adoc#_importing_and_installing_extensions_in_an_air_gapped_environment[Importing and installing extensions in an air-gapped environment]
-* xref:installation-and-upgrade/references/helm-chart-options.adoc[Rancher Helm chart options]
+* {xref-helm-chart-options}[Rancher Helm chart options]
 * xref:installation-and-upgrade/resources/tls-secrets.adoc[Adding TLS secrets]
 * xref:installation-and-upgrade/troubleshooting/troubleshooting.adoc[Troubleshooting Rancher Kubernetes Installations]
