Fixing xref path
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/community-docs/v2.11/modules/ROOT/pages/reference-guides/cluster-configuration/downstream-cluster-configuration/index.adoc
+++ b/community-docs/v2.11/modules/ROOT/pages/reference-guides/cluster-configuration/downstream-cluster-configuration/index.adoc
@@ -7,4 +7,4 @@ endif::[]
 :community-path: reference-guides/cluster-configuration/downstream-cluster-configuration/downstream-cluster-configuration
 :product-path:
 
-The following docs will discuss xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/index.adoc[machine configuration].
+The following docs will discuss xref:reference-guides/cluster-configuration/downstream-cluster-configuration/node-template-configuration/index.adoc[node template configuration] and xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/index.adoc[machine configuration].
